--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
     <p>記入例↓</p>
 
     <ul> <!-- changed to list in the tutorial -->
-      <li>カーニヴァル・ジャパネスク - 徳川まつり</li>
-      <li>Tokyo 7th シスターズの曲</li>
-      <li>Color Bass</li>
-      <li>夜に駆けそうな曲</li>
+      <li>・カーニヴァル・ジャパネスク - 徳川まつり</li>
+      <li>・Tokyo 7th シスターズの曲</li>
+      <li>・Color Bass</li>
+      <li>・夜に駆けそうな曲</li>
     </ul>
 
     <script src="scripts/main.js"></script>
     <form action="/my-handling-form-page" method="post">
+      <legend>Juke Box</legend>
       <ul>
         <li>
           <label for="song">Song:</label>
