--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
     form {
       /* フォームをページの中央に配置 */
+      text-align: left;
       margin: 0 auto;
       width: 500px;
       /* フォームの輪郭 */
@@ -87,7 +88,6 @@
 
     <script src="scripts/main.js"></script>
     <form action="/my-handling-form-page" method="post">
-      <legend>Juke Box</legend>
       <ul>
         <li>
           <label for="song">Song:</label>
