--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </ul>
 
     <script src="scripts/main.js"></script>
-    <form action="/my-handling-form-page" method="post">
+    <form action="php-example.php" method="post">
       <ul>
         <li>
           <label for="song">Song:</label>
