--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <li>・夜に駆けそうな曲</li>
     </ul>
 
-    <form action="php-example.php" method="post">
+    <form action="php-test.php" method="post">
       <ul>
         <li>
           <label for="song">Song:</label>
