--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <form action="/my-handling-form-page" method="POST">
       <ul>
         <li>
-          <label for="song">Song:</label>
-          <input type="text" id="song" onkeyup='window.contact.checkValidation()' placeholder="song">
+          <label for="name">Song:</label>
+          <input type="text" id="name" onkeyup='window.contact.checkValidation()' placeholder="name">
         </li>
         <li class="button">
           <button type="submit" id="submit" name="send" onclick='window.contact.send(this)' value="Send">送信</button>
