--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <li>・Color Bass</li>
       <li>・夜に駆けそうな曲</li>
     </ul>
-    <form action="/my-handling-form-page" method="POST">
+    <form>
       <ul>
         <li>
           <label for="name">Song:</label>
