--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       font: 1em sans-serif;
 
       /* テキストフィールドの大きさを統一 */
-      width: 500px;
+      width: 400px;
       box-sizing: border-box;
 
       /* フォームフィールド境界に合わせる */
@@ -88,7 +88,7 @@
     <form>
       <ul>
         <li>
-          <label for="name">Song:</label>
+          <label for="ここに入力">Song:</label>
           <input type="text" id="name" onkeyup='window.contact.checkValidation()' placeholder="name">
         </li>
         <li class="button">
