--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="scripts/contact.js"></script>
+    <script src="https://github.com/m2ran/m2ran.github.io/blob/main/scripts/contact.js"></script>
   
   
     <link href="styles/style.css" rel="stylesheet">
@@ -84,17 +84,25 @@
     <h1>Juke Box</h1>
     <p>聴きたい曲を下のフォームに入力して送信すると、当日流れる可能性があります。</p>
     <p>特定の曲でも、ジャンルやアーティスト、コンテンツでも良いです。</p>
-    <form>
-      <ul>
-        <li>
-          <label for="song">Song:</label>
-          <input type="text" id="name" onkeyup='window.contact.checkValidation()' placeholder="ここに入力">
-        </li>
-        <li class="button">
-          <button type="submit" id="submit" name="send" onclick='window.contact.send(this)' value="Send">送信</button>
-        </li>
-      </ul>
+    <form class="contact__form"
+    action="https://docs.google.com/forms/d/e/1FAIpQLSfOQPYfYpHsjTdMgQ6qv4BiVPeIHwYOrRjymNn2mT605Q-HUg/formResponse"
+    target="dummyIframe" method="POST" id="contactForm">
+        <u1>
+            <li class="contact__name">
+                <label for="songTitle">Song:</label>
+                <input type="text" id="songTitle" onkeyup='window.contact.checkValidation()' placeholder="ここに入力" required />
+            </li>
+            <li class="button">
+                <button type="submit" id="submit" name="send" onclick='window.contact.send(this)' value="Send">送信</button>
+            </li>
+        </ul>
+        <iframe name="dummyIframe" style="display:none;" id="dummyIframe"></iframe>
+        <div class="contact__submitted" id="submittedMsg" style="display: none;">
+            <p>正常に送信されました</p>
+            <div class="button-sm" id="resubmitBtn">フォームを再表示</div>
+        </div>
     </form>
+    <script type="text/javascript" src="https://github.com/m2ran/m2ran.github.io/scripts/contact.js"></script>
 </body>
 
 <script>
