--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
 <body>
     <h1>Juke Box</h1>
     <p>聴きたい曲を下のフォームに入力して送信すると、当日流れる可能性があります。</p>
-    <p>特定の曲でも、ジャンルやアーティスト、コンテンツでも良いです。4</p>
-    <li><input name="name" id="name" type="text" onkeyup='window.contact.checkValidation()' placeholder="ここに入力" ><\li>
-    <input type="submit" id="submit" name="send" onclick='window.contact.send(this)' value="Send">
+    <p>特定の曲でも、ジャンルやアーティスト、コンテンツでも良いです。5</p>
+    <u1>
+        <input name="name" id="name" type="text" onkeyup='window.contact.checkValidation()' placeholder="ここに入力" >
+        <input type="submit" id="submit" name="send" onclick='window.contact.send(this)' value="Send">
+    </u1>
 </body>
 
 <script>
