--- a/index.html
+++ b/index.html
@@ -4,78 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://github.com/m2ran/m2ran.github.io/scripts/contact.js"></script>
+    <script src="scripts/contact.js"></script>
   
   
     <link href="styles/style.css" rel="stylesheet">
-    <meta charset="utf-8">
     <title>楽曲リクエスト</title>
     <style>
-    form {
-      /* フォームをページの中央に配置 */
-      text-align: left;
-      margin: 0 auto;
-      width: 500px;
-      /* フォームの輪郭 */
-      padding: 1em;
-      border: 1px solid #CCC;
-      border-radius: 1em;
-    }
-
     ul {
       list-style: none;
       padding: 0;
       margin: 0;
-    }
-
-    form li + li {
-      margin-top: 1em;
-    }
-
-    label {
-      /* 大きさと配置を統一 */
-      display: inline-block;
-      width: 90px;
-      text-align: right;
-    }
-
-    input,
-    textarea {
-      /* すべてのテキストフィールドのフォント設定を一致させる
-         既定で、 textarea には等幅フォントが設定されている */
-      font: 1em sans-serif;
-
-      /* テキストフィールドの大きさを統一 */
-      width: 300px;
-      box-sizing: border-box;
-
-      /* フォームフィールド境界に合わせる */
-      border: 1px solid #999;
-    }
-
-    input:focus,
-    textarea:focus {
-      /* フォーカスのある要素を強調する */
-      border-color: #000;
-    }
-
-    textarea {
-      /* 複数行のテキストフィールドをラベルに揃える */
-      vertical-align: top;
-
-      /* テキスト入力に十分な空間を与える */
-      height: 5em;
-    }
-
-    .button {
-      /* ボタンを他のテキストフィールドと同じ場所に置く */
-      padding-left: 90px; /* label 要素と同じサイズ */
-    }
-
-    button {
-      /* このマージンは、ラベルとテキストフィールドの間のスペースと
-         おおよそ同じスペースを表す */
-      margin-left: .5em;
     }
     </style>
 </head>
