--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>Juke Box</h1>
-    <p>聴きたい曲を下のフォームに入力して送信すると、当日流れる可能性があります。</p>
+    <p>聴きたい曲を下のフォームに入力して送信しておけば、当日流れるかもしれません。</p>
     <p>特定の曲でも、ジャンルやアーティスト、コンテンツでも良いです。6</p>
     <u1>
         <input name="name" id="name" type="text" onkeyup='window.contact.checkValidation()' placeholder="ここに入力" >
