--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://github.com/m2ran/m2ran.github.io/blob/main/scripts/contact.js"></script>
+    <script src="https://github.com/m2ran/m2ran.github.io/scripts/contact.js"></script>
   
   
     <link href="styles/style.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 <body>
     <h1>Juke Box</h1>
     <p>聴きたい曲を下のフォームに入力すれば、当日流れるかもしれません。</p>
-    <p>特定の曲でも、ジャンルやアーティスト、コンテンツでも良いです。8</p>
+    <p>特定の曲でも、ジャンルやアーティスト、コンテンツでも良いです。9</p>
     <u1>
         <input name="name" id="name" type="text" onkeyup='window.contact.checkValidation()' placeholder="ここに入力" >
         <input type="submit" id="submit" name="send" onclick='window.contact.send(this)' value="送信">
