--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://github.com/m2ran/m2ran.github.io/scripts/contact.js"></script>
+    <script src="scripts/contact.js"></script>
   
   
     <link href="styles/style.css" rel="stylesheet">
